Bug Fixes
Bug Fixes:
1. Set maximum password/username length to 64 characters.
2. Add sign-up.
